# data-protection

./: .gitignore  BW_table.cpp  CMakeLists.txt  README.md  RSE.cpp  adler_djb.cpp  balcer_rsa.cpp
Vigenere/: README.md  attack_vingenere.cpp  attack_vingenere.h  in.txt  kasiski_attack.h  krasiski_attack.cpp  main.cpp  simple_in.txt  vingenere_cipher.cpp  vingenere_cipher.h
modulo-power/: main.cpp
primes/: primes.cpp  test.cpp  test.h
repetition/.ipynb_checkpoints/: substitution_cipher-checkpoint.ipynb
repetition/modulo_power/: modulo_power.ipynb
repetition/primes/: primes.ipynb
repetition/sybstitution_cipher/: lorem_ipsum.txt  substitution_cipher.ipynb
repetition/vigenere/: vigenere_cipher.ipynb
simple_substitution_cipher/: decoded.txt  encoded.txt  in.txt  main.cpp  simple substitution cipher.md  statistical_attack.cpp  statistical_attack.h  substitution_cipher.cpp  substitution_cipher.h
